--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/SistemaVendas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\mysql-connector-java-5.1.23\\mysql-connector-java-5.1.23\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-8.0.19.jar=C:\\Program Files\\NetBeans 8.2\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.mysql-connector-java-8.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
